--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.5",
-    "openai": "^4.84.0"
+    "openai": "^4.84.0",
+    "pdf-parse": "^1.1.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
