--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "dev": "nodemon index.js"
   },
   "dependencies": {
+    "axios": "^1.8.4",
     "backend": "file:",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "form-data": "^4.0.2",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.5",
     "openai": "^4.84.0",
